# kinova-joint-tasks

./: .gitignore  README.md
src/moveit_joint_sender/: CMakeLists.txt  package.xml
src/moveit_joint_sender/src/: send_joint_state_goal.cpp
src/moveit_joint_sender_py/: setup.py
src/moveit_joint_sender_py/moveit_joint_sender_py/: send_joint_state_goal.py  trisafe_execute.py
