<?xml version="1.0"?>
<package format="3">
  <name>moveit_joint_sender</name>
  <version>0.0.0</version>
  <description>Tool for sending sequential joint-space goals to MoveIt from YAML data.</description>

  <maintainer email="pascal@todo.todo">pascal</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build and runtime dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>control_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
